@@ -2,6 +2,10 @@
 
 * In Development
 
+** Additions
+
++ Add =evil-numbers-case= option for the case to use for hexadecimal values (defaults to the current case).
+
 ** Fixes
 
 + Fix #24 hexadecimal values case changes when incrementing/decrementing.
